tests/golden/errors/sort_unorderable.py
xs = [1, "a"]
xs.sort()
